// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Articles A11y I can see the skip to content link 1`] = `"Skip to content"`;

exports[`AMP Articles AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Articles AMP Geo config 1`] = `
Object {
  "AmpBind": true,
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Articles Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News",
  "url": "/news",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 2`] = `
Object {
  "text": "Why you can trust the BBC",
  "url": "https://www.bbc.com/news/help-41670342",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 3`] = `
Object {
  "text": "Terms of Use",
  "url": "https://www.bbc.com/terms",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 4`] = `
Object {
  "text": "About the BBC",
  "url": "https://www.bbc.co.uk/aboutthebbc/",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 5`] = `
Object {
  "text": "Privacy Policy",
  "url": "https://www.bbc.com/privacy/",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 7`] = `
Object {
  "text": "Accessibility Help",
  "url": "https://www.bbc.com/accessibility/",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 8`] = `
Object {
  "text": "Contact the BBC",
  "url": "https://www.bbc.com/contact/",
}
`;

exports[`AMP Articles Footer Anchors should match text and url 9`] = `
Object {
  "text": "Read about our approach to external linking.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Articles Footer Cookie Settings Button should match text and on handler 1`] = `
Object {
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "AdChoices / Do Not Sell My Info",
}
`;

exports[`AMP Articles Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/news"`;

exports[`AMP Articles Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. The BBC is not responsible for the content of external sites. Read about our approach to external linking."`;

exports[`AMP Articles Header I can see the branding 1`] = `"BBC News"`;

exports[`AMP Articles Header Navigation link should match text and url 1`] = `
Object {
  "text": "Home",
  "url": "/news",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 2`] = `
Object {
  "text": "UK",
  "url": "/news/uk",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 3`] = `
Object {
  "text": "World",
  "url": "/news/world",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 4`] = `
Object {
  "text": "Business",
  "url": "/news/business",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 5`] = `
Object {
  "text": "Politics",
  "url": "/news/politics",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 6`] = `
Object {
  "text": "Tech",
  "url": "/news/technology",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 7`] = `
Object {
  "text": "Science",
  "url": "/news/science_and_environment",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 8`] = `
Object {
  "text": "Health",
  "url": "/news/health",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 9`] = `
Object {
  "text": "Family & Education",
  "url": "/news/education",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 10`] = `
Object {
  "text": "Entertainment & Arts",
  "url": "/news/entertainment_and_arts",
}
`;

exports[`AMP Articles Header Navigation link should match text and url 11`] = `
Object {
  "text": "Stories",
  "url": "/news/stories",
}
`;

exports[`AMP Articles Image Caption should match text 1`] = `"Image caption, Former embroider Pauline Clayton described the gift as \\"lovely\\""`;

exports[`AMP Articles Image should match snapshot 1`] = `null`;

exports[`AMP Articles Main heading should match text 1`] = `"Internal server error"`;

exports[`AMP Articles SEO Canonical link 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`AMP Articles SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Articles SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Articles SEO Heading level 1 1`] = `"Internal server error"`;

exports[`AMP Articles SEO Lang attribute 1`] = `"en-GB"`;

exports[`AMP Articles SEO OG description 1`] = `"Royal wedding flowers given to Hackney hospice"`;

exports[`AMP Articles SEO OG image 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`AMP Articles SEO OG image alt 1`] = `"BBC News"`;

exports[`AMP Articles SEO OG locale 1`] = `"en_GB"`;

exports[`AMP Articles SEO OG site name 1`] = `"BBC News"`;

exports[`AMP Articles SEO OG title 1`] = `"Royal wedding flowers given to Hackney hospice - BBC News"`;

exports[`AMP Articles SEO OG type 1`] = `"article"`;

exports[`AMP Articles SEO OG url 1`] = `"http://localhost:7080/news/articles/c0g992jmmkko"`;

exports[`AMP Articles SEO Page title 1`] = `"Internal server error - BBC News"`;

exports[`AMP Articles SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`AMP Articles SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Articles SEO Twitter creator 1`] = `"@BBCNews"`;

exports[`AMP Articles SEO Twitter description 1`] = `"Internal server error"`;

exports[`AMP Articles SEO Twitter image alt 1`] = `"BBC News"`;

exports[`AMP Articles SEO Twitter image src 1`] = `"https://static.files.bbci.co.uk/ws/simorgh-assets/public/news/images/metadata/poster-1024x576.png"`;

exports[`AMP Articles SEO Twitter site 1`] = `"@BBCNews"`;

exports[`AMP Articles SEO Twitter title 1`] = `"Internal server error - BBC News"`;
